fix gaps

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,21 +238,26 @@ img {
 */
 
 .section-hero {
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: var(--hero-background-color);
+}
+
+.hero-container {
   padding-top: 200px;
   padding-bottom: 200px;
-  max-height: 600px;
-  max-width: 1600px;
+  height: 600px;
+  width: 1600px;
   margin-left: auto;
   margin-right: auto;
 
   text-align: center;
 
-  background-color: var(--hero-background-color);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero/hero-background.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: 1600px 600px;
 }
 
 .hero-title {
@@ -303,8 +308,7 @@ img {
 }
 
 .goals-item {
-  flex-basis: calc((100% + var(--card-set-gap)) / 4 - var(--card-set-gap));
-  /* То же самое: flex-basis: calc((100% - 3 * var(--card-set-gap)) / 4); */
+  flex-basis: calc((100% - var(--card-set-gap) * 3) / 4);
 }
 
 .goals-list .goals-item:not(:first-of-type) {
@@ -379,7 +383,6 @@ img {
   text-transform: uppercase;
   color: var(--main-white-color);
   background-color: rgba(47, 48, 58, 0.8);
-  /* outline: 2px solid orange; */
 }
 
 /*
@@ -447,7 +450,6 @@ img {
 
   fill: var(--icons-fill-color);
   transition: fill 250ms var(--main-time-func), background-color 250ms var(--main-time-func);
-  /* outline: 1px solid tomato; */
 }
 
 .social-link:hover,
@@ -618,12 +620,8 @@ img {
 .list-filter {
   display: flex;
   justify-content: center;
-
+  gap: 8px;
   margin-bottom: 50px;
-}
-
-.filter-item:not(:last-child) {
-  margin-right: 8px;
 }
 
 .btn-filter {
@@ -681,17 +679,12 @@ img {
 
 .portfolio-list {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  gap: var(--card-set-gap);
 }
 
 .portfolio-item {
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
-  flex-basis: calc(100% / 3 - var(--card-set-gap));
-
+  flex-basis: calc((100% - var(--card-set-gap) * 2) / 3);
   transition: box-shadow 250ms var(--main-time-func);
 }
 
@@ -712,6 +705,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms var(--main-time-func);
@@ -723,6 +717,8 @@ img {
 
 .overlay-text {
   padding: 60px 24px;
+  padding-bottom: 0;
+
   font-size: 18px;
   line-height: calc(28 / 16);
   color: var(--main-white-color);
